gen/groupsmigration/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-groupsmigration1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/groupsmigration/v1/lib)
error[E0609]: no field `request` on type `archive::InsertRequestBuilder<'a, A>`
   --> gen/groupsmigration/v1/lib/src/lib.rs:195:59
    |
195 |             let request_json = ::serde_json::to_vec(&self.request)?;
    |                                                           ^^^^^^^ help: a field with a similar name exists: `reqwest`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
error: Could not compile `google-groupsmigration1`.

To learn more, run the command again with --verbose.
